--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.6 Group Commit.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.6 Group Commit.md
@@ -546,7 +546,7 @@ group_commit_memory_rows_for_max_filter_ratio**
 
 * 测试方法
 
-    导入 `247249096` 行数据
+    * 导入 `247249096` 行数据
 
 * 测试结果
 
@@ -623,51 +623,51 @@ group_commit_memory_rows_for_max_filter_ratio**
 
     * 建表语句为
 
-    ```sql
-    CREATE TABLE IF NOT EXISTS lineitem (
-    L_ORDERKEY    INTEGER NOT NULL,
-    L_PARTKEY     INTEGER NOT NULL,
-    L_SUPPKEY     INTEGER NOT NULL,
-    L_LINENUMBER  INTEGER NOT NULL,
-    L_QUANTITY    DECIMAL(15,2) NOT NULL,
-    L_EXTENDEDPRICE  DECIMAL(15,2) NOT NULL,
-    L_DISCOUNT    DECIMAL(15,2) NOT NULL,
-    L_TAX         DECIMAL(15,2) NOT NULL,
-    L_RETURNFLAG  CHAR(1) NOT NULL,
-    L_LINESTATUS  CHAR(1) NOT NULL,
-    L_SHIPDATE    DATE NOT NULL,
-    L_COMMITDATE  DATE NOT NULL,
-    L_RECEIPTDATE DATE NOT NULL,
-    L_SHIPINSTRUCT CHAR(25) NOT NULL,
-    L_SHIPMODE     CHAR(10) NOT NULL,
-    L_COMMENT      VARCHAR(44) NOT NULL
-    )
-    DUPLICATE KEY(L_ORDERKEY, L_PARTKEY, L_SUPPKEY, L_LINENUMBER)
-    DISTRIBUTED BY HASH(L_ORDERKEY) BUCKETS 32
-    PROPERTIES (
-    "replication_num" = "3"
-    );
-    ```
+        ```sql
+        CREATE TABLE IF NOT EXISTS lineitem (
+        L_ORDERKEY    INTEGER NOT NULL,
+        L_PARTKEY     INTEGER NOT NULL,
+        L_SUPPKEY     INTEGER NOT NULL,
+        L_LINENUMBER  INTEGER NOT NULL,
+        L_QUANTITY    DECIMAL(15,2) NOT NULL,
+        L_EXTENDEDPRICE  DECIMAL(15,2) NOT NULL,
+        L_DISCOUNT    DECIMAL(15,2) NOT NULL,
+        L_TAX         DECIMAL(15,2) NOT NULL,
+        L_RETURNFLAG  CHAR(1) NOT NULL,
+        L_LINESTATUS  CHAR(1) NOT NULL,
+        L_SHIPDATE    DATE NOT NULL,
+        L_COMMITDATE  DATE NOT NULL,
+        L_RECEIPTDATE DATE NOT NULL,
+        L_SHIPINSTRUCT CHAR(25) NOT NULL,
+        L_SHIPMODE     CHAR(10) NOT NULL,
+        L_COMMENT      VARCHAR(44) NOT NULL
+        )
+        DUPLICATE KEY(L_ORDERKEY, L_PARTKEY, L_SUPPKEY, L_LINENUMBER)
+        DISTRIBUTED BY HASH(L_ORDERKEY) BUCKETS 32
+        PROPERTIES (
+        "replication_num" = "3"
+        );
+        ```
 
 * 测试工具
 
     * Jmeter
 
-    需要设置的jmeter参数如下图所示
+        需要设置的jmeter参数如下图所示
 
-    ![](../../../../../../assets/images/Doris/jmeter1-baa8bee682b7778e4b90dcc7d1e66d96.jpg)
+        ![](../../../../../../assets/images/Doris/jmeter1-baa8bee682b7778e4b90dcc7d1e66d96.jpg)
 
-    ![](../../../../../../assets/images/Doris/jmeter2-9060becd8c6cb1bef900edad9bb306aa.jpg)
+        ![](../../../../../../assets/images/Doris/jmeter2-9060becd8c6cb1bef900edad9bb306aa.jpg)
 
-    1. 设置测试前的init语句， `set group_commit=async_mode` 以及 `set enable_nereids_planner=false` 。
+        1. 设置测试前的init语句， `set group_commit=async_mode` 以及 `set enable_nereids_planner=false` 。
 
-    2. 开启jdbc的prepared statement，完整的url为 `jdbc:mysql://127.0.0.1:9030?useServerPrepStmts=true&useLocalSessionState=true&rewriteBatchedStatements=true&cachePrepStmts=true&prepStmtCacheSqlLimit=99999&prepStmtCacheSize=50&sessionVariables=group_commit=async_mode&sessionVariables=enable_nereids_planner=false` 。
+        2. 开启jdbc的prepared statement，完整的url为 `jdbc:mysql://127.0.0.1:9030?useServerPrepStmts=true&useLocalSessionState=true&rewriteBatchedStatements=true&cachePrepStmts=true&prepStmtCacheSqlLimit=99999&prepStmtCacheSize=50&sessionVariables=group_commit=async_mode&sessionVariables=enable_nereids_planner=false` 。
 
-    3. 设置导入类型为 `prepared update statement` 。
+        3. 设置导入类型为 `prepared update statement` 。
 
-    4. 设置导入语句。
+        4. 设置导入语句。
 
-    5. 设置每次需要导入的值，注意，导入的值与导入值的类型要一一匹配。
+        5. 设置每次需要导入的值，注意，导入的值与导入值的类型要一一匹配。
 
 * 测试方法
 
@@ -679,26 +679,26 @@ group_commit_memory_rows_for_max_filter_ratio**
 
     * 以下测试分为30，100，500并发。
 
-    30并发sync模式5个BE3副本性能测试
+        30并发sync模式5个BE3副本性能测试
 
-    | Group commit internal | 10ms | 20ms | 50ms | 100ms |
-    | -- | -- | -- | -- | -- |
-    | enable_nereids_planner=true | 891.8 | 701.1 | 400.0 | 237.5 |
-    | enable_nereids_planner=false | 885.8 | 688.1 | 398.7 | 232.9 |
+        | Group commit internal | 10ms | 20ms | 50ms | 100ms |
+        | -- | -- | -- | -- | -- |
+        | enable_nereids_planner=true | 891.8 | 701.1 | 400.0 | 237.5 |
+        | enable_nereids_planner=false | 885.8 | 688.1 | 398.7 | 232.9 |
 
-    100并发sync模式5个BE3副本性能测试
+        100并发sync模式5个BE3副本性能测试
 
-    | Group commit internal | 10ms | 20ms | 50ms | 100ms |
-    | -- | -- | -- | -- | -- |
-    | enable_nereids_planner=true | 2427.8 | 2068.9 | 1259.4 | 764.9 |
-    | enable_nereids_planner=false | 2320.4 | 1899.3 | 1206.2 | 749.7 |
+        | Group commit internal | 10ms | 20ms | 50ms | 100ms |
+        | -- | -- | -- | -- | -- |
+        | enable_nereids_planner=true | 2427.8 | 2068.9 | 1259.4 | 764.9 |
+        | enable_nereids_planner=false | 2320.4 | 1899.3 | 1206.2 | 749.7 |
 
-    500并发sync模式5个BE3副本性能测试
+        500并发sync模式5个BE3副本性能测试
 
-    | Group commit internal | 10ms | 20ms | 50ms | 100ms |
-    | -- | -- | -- | -- | -- |
-    | enable_nereids_planner=true | 5567.5 | 5713.2 | 4681.0 | 3131.2 |
-    | enable_nereids_planner=false | 4471.6 | 5042.5 | 4932.2 | 3641.1 |
+        | Group commit internal | 10ms | 20ms | 50ms | 100ms |
+        | -- | -- | -- | -- | -- |
+        | enable_nereids_planner=true | 5567.5 | 5713.2 | 4681.0 | 3131.2 |
+        | enable_nereids_planner=false | 4471.6 | 5042.5 | 4932.2 | 3641.1 |
 
 ### 6.4 Insert into sync 模式大批量数据
 
@@ -718,31 +718,31 @@ group_commit_memory_rows_for_max_filter_ratio**
 
     * 建表语句为
 
-    ```sql
-    CREATE TABLE IF NOT EXISTS lineitem (
-    L_ORDERKEY    INTEGER NOT NULL,
-    L_PARTKEY     INTEGER NOT NULL,
-    L_SUPPKEY     INTEGER NOT NULL,
-    L_LINENUMBER  INTEGER NOT NULL,
-    L_QUANTITY    DECIMAL(15,2) NOT NULL,
-    L_EXTENDEDPRICE  DECIMAL(15,2) NOT NULL,
-    L_DISCOUNT    DECIMAL(15,2) NOT NULL,
-    L_TAX         DECIMAL(15,2) NOT NULL,
-    L_RETURNFLAG  CHAR(1) NOT NULL,
-    L_LINESTATUS  CHAR(1) NOT NULL,
-    L_SHIPDATE    DATE NOT NULL,
-    L_COMMITDATE  DATE NOT NULL,
-    L_RECEIPTDATE DATE NOT NULL,
-    L_SHIPINSTRUCT CHAR(25) NOT NULL,
-    L_SHIPMODE     CHAR(10) NOT NULL,
-    L_COMMENT      VARCHAR(44) NOT NULL
-    )
-    DUPLICATE KEY(L_ORDERKEY, L_PARTKEY, L_SUPPKEY, L_LINENUMBER)
-    DISTRIBUTED BY HASH(L_ORDERKEY) BUCKETS 32
-    PROPERTIES (
-    "replication_num" = "3"
-    );
-    ```
+        ```sql
+        CREATE TABLE IF NOT EXISTS lineitem (
+        L_ORDERKEY    INTEGER NOT NULL,
+        L_PARTKEY     INTEGER NOT NULL,
+        L_SUPPKEY     INTEGER NOT NULL,
+        L_LINENUMBER  INTEGER NOT NULL,
+        L_QUANTITY    DECIMAL(15,2) NOT NULL,
+        L_EXTENDEDPRICE  DECIMAL(15,2) NOT NULL,
+        L_DISCOUNT    DECIMAL(15,2) NOT NULL,
+        L_TAX         DECIMAL(15,2) NOT NULL,
+        L_RETURNFLAG  CHAR(1) NOT NULL,
+        L_LINESTATUS  CHAR(1) NOT NULL,
+        L_SHIPDATE    DATE NOT NULL,
+        L_COMMITDATE  DATE NOT NULL,
+        L_RECEIPTDATE DATE NOT NULL,
+        L_SHIPINSTRUCT CHAR(25) NOT NULL,
+        L_SHIPMODE     CHAR(10) NOT NULL,
+        L_COMMENT      VARCHAR(44) NOT NULL
+        )
+        DUPLICATE KEY(L_ORDERKEY, L_PARTKEY, L_SUPPKEY, L_LINENUMBER)
+        DISTRIBUTED BY HASH(L_ORDERKEY) BUCKETS 32
+        PROPERTIES (
+        "replication_num" = "3"
+        );
+        ```
 
 * 测试工具
 
@@ -752,29 +752,29 @@ group_commit_memory_rows_for_max_filter_ratio**
 
     * 通过 `Jmeter` 向 `Doris` 写数据。每个并发每次通过insert into写入1000行数据。
 
-    测试结果
+* 测试结果
 
     * 数据单位为行每秒。
 
     * 以下测试分为30，100，500并发。
 
-    30并发sync模式5个BE3副本性能测试
+        30并发sync模式5个BE3副本性能测试
 
-    | Group commit internal | 10ms | 20ms | 50ms | 100ms |
-    | -- | -- | -- | -- | -- |
-    | enable_nereids_planner=true | 9.1K | 11.1K | 11.4K | 11.1K |
-    | enable_nereids_planner=false | 157.8K | 159.9K | 154.1K | 120.4K |
+        | Group commit internal | 10ms | 20ms | 50ms | 100ms |
+        | -- | -- | -- | -- | -- |
+        | enable_nereids_planner=true | 9.1K | 11.1K | 11.4K | 11.1K |
+        | enable_nereids_planner=false | 157.8K | 159.9K | 154.1K | 120.4K |
 
-    100并发sync模式5个BE3副本性能测试
+        100并发sync模式5个BE3副本性能测试
 
-    | Group commit internal | 10ms | 20ms | 50ms | 100ms |
-    | -- | -- | -- | -- | -- |
-    | enable_nereids_planner=true | 10.0K | 9.2K | 8.9K | 8.9K |
-    | enable_nereids_planner=false | 130.4k | 131.0K | 130.4K | 124.1K |
+        | Group commit internal | 10ms | 20ms | 50ms | 100ms |
+        | -- | -- | -- | -- | -- |
+        | enable_nereids_planner=true | 10.0K | 9.2K | 8.9K | 8.9K |
+        | enable_nereids_planner=false | 130.4k | 131.0K | 130.4K | 124.1K |
 
-    500并发sync模式5个BE3副本性能测试
+        500并发sync模式5个BE3副本性能测试
 
-    | Group commit internal | 10ms | 20ms | 50ms | 100ms |
-    | -- | -- | -- | -- | -- |
-    | enable_nereids_planner=true | 2.5K | 2.5K | 2.3K | 2.1K |
-    | enable_nereids_planner=false | 94.2K | 95.1K | 94.4K | 94.8K |
+        | Group commit internal | 10ms | 20ms | 50ms | 100ms |
+        | -- | -- | -- | -- | -- |
+        | enable_nereids_planner=true | 2.5K | 2.5K | 2.3K | 2.1K |
+        | enable_nereids_planner=false | 94.2K | 95.1K | 94.4K | 94.8K |
